# typster

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: release.yml
assets/: index.html
assets/fonts/: README.md
assets/fonts/WarpnineSans/: OFL
examples/: compile.rs  export_fonts.rs  format.rs  list_fonts.rs  main.rs  sample.typ  set_permission.rs  update_metadata.rs  version.rs  watch.rs
src/: compile.rs  download.rs  fonts.rs  format.rs  lib.rs  package.rs  set_permission.rs  update_metadata.rs  version.rs  watch.rs  world.rs
tests/: formatted.typ  integration_tests.rs  sample.typ
